minor fix to alignment

--- a/src/styles/scss/_controls.scss
+++ b/src/styles/scss/_controls.scss
@@ -65,7 +65,7 @@
     button {
       height: 24px;
       width: 24px;
-      vertical-align: middle;
+      vertical-align: super;
     }
   }
 
